// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input[Base] should render correctly  1`] = `
<div
  class="soui-input soui-input-wrapper"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="input something"
      value=""
    />
  </div>
</div>
`;

exports[`Input[Base] should render correctly about autoSelect 1`] = `
<div
  class="soui-input soui-input-wrapper"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="input something"
      value="hello world"
    />
  </div>
</div>
`;

exports[`Input[Base] should render correctly about disabled 1`] = `
<div>
  <div
    class="soui-input-group soui-input-group-disabled"
    data-soui-role="input-group"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper soui-input-wrapper-disabled"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          disabled=""
          placeholder="first name"
          value=""
        />
      </div>
    </div>
    <span>
      -
    </span>
    <div
      class="soui-input soui-input-wrapper soui-input-wrapper-disabled"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          disabled=""
          placeholder="last name"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper soui-input-wrapper-disabled"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        disabled=""
        placeholder="disabled input"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about enter 1`] = `
<div>
  <div
    class="soui-input-group"
    data-soui-role="input-group"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="onKeyUp"
          value=""
        />
      </div>
    </div>
    <b
      class="onKeyUp"
    >
      onKeyUp: 0 times
    </b>
  </div>
  <div
    class="soui-input-group"
    data-soui-role="input-group"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="onKeyDown"
          value=""
        />
      </div>
    </div>
    <b
      class="onKeyDown"
    >
      onKeyDown: 0 times
    </b>
  </div>
  <div
    class="soui-input-group"
    data-soui-role="input-group"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="onEnterPress"
          value=""
        />
      </div>
    </div>
    <b
      class="onEnterPress"
    >
      onEnterPress: 0 times
    </b>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about group 1`] = `
<div>
  <div
    class="soui-input-group"
    data-soui-role="input-group"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <b>
      http://
    </b>
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="soui-input-group"
    data-soui-role="input-group"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          value=""
        />
      </div>
    </div>
    <b>
      .com
    </b>
  </div>
  <div
    class="soui-input-group"
    data-soui-role="input-group"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <b>
      http://
    </b>
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          value=""
        />
      </div>
    </div>
    <b>
      .com
    </b>
  </div>
  <div
    class="soui-input-group"
    data-soui-role="input-group"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          value=""
        />
      </div>
    </div>
    <div
      style="line-height: 30px;"
    >
      -
    </div>
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          value=""
        />
      </div>
    </div>
  </div>
  <h3
    style="margin-bottom: 12px; font-size: 16px;"
  >
    Small Size
  </h3>
  <div
    class="soui-input-group soui-input-group-small"
    data-soui-role="input-group"
    dir="ltr"
    style="width: 300px; margin-bottom: 24px;"
  >
    <b>
      http://
    </b>
    <div
      class="soui-input soui-input-wrapper soui-input-wrapper-small"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="email"
          value=""
        />
      </div>
    </div>
    <b>
      .com
    </b>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about innerTitle 1`] = `
<div
  style="width: 300px; display: flex; flex-direction: column; gap: 24px;"
>
  <div
    class="soui-input-wrapper-inner-title soui-input soui-input-wrapper soui-input-wrapper-small"
    data-soui-input-border="true"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <div
        class="soui-inner-title-wrapper soui-inner-title-wrapper-small"
      >
        <div
          class="soui-inner-title-title soui-inner-title-top"
        >
          Small title
        </div>
        <div
          class="soui-inner-title-place"
        >
          <div
            class="soui-inner-title-title"
          >
            Small title
          </div>
        </div>
        <div
          class="soui-inner-title-content"
        >
          <input
            class="soui-input-input"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-input-wrapper-inner-title soui-input soui-input-wrapper"
    data-soui-input-border="true"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <div
        class="soui-inner-title-wrapper"
      >
        <div
          class="soui-inner-title-title soui-inner-title-top"
        >
          Medium Title
        </div>
        <div
          class="soui-inner-title-place"
        >
          <div
            class="soui-inner-title-title"
          >
            Medium Title
          </div>
        </div>
        <div
          class="soui-inner-title-content"
        >
          <input
            class="soui-input-input"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-input-wrapper-inner-title soui-input soui-input-wrapper soui-input-wrapper-large"
    data-soui-input-border="true"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <div
        class="soui-inner-title-wrapper soui-inner-title-wrapper-large"
      >
        <div
          class="soui-inner-title-title soui-inner-title-top"
        >
          Large Title
        </div>
        <div
          class="soui-inner-title-place"
        >
          <div
            class="soui-inner-title-title"
          >
            Large Title
          </div>
        </div>
        <div
          class="soui-inner-title-content"
        >
          <input
            class="soui-input-input"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about limit 1`] = `
<div
  style="width: 300px;"
>
  <div
    class="soui-input-group"
    data-soui-role="input-group"
    dir="ltr"
    style="margin-bottom: 24px;"
  >
    <b
      class="min"
    >
      min
    </b>
    <div
      class="soui-input-wrapper-number soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="100"
          type="text"
          value=""
        />
      </div>
      <div
        class="soui-input-number-step"
      >
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-input-group"
    data-soui-role="input-group"
    dir="ltr"
    style="margin-bottom: 24px;"
  >
    <b
      class="max"
    >
      max
    </b>
    <div
      class="soui-input-wrapper-number soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="200"
          type="text"
          value=""
        />
      </div>
      <div
        class="soui-input-number-step"
      >
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-input-group"
    data-soui-role="input-group"
    dir="ltr"
    style="margin-bottom: 24px;"
  >
    <b
      class="maxLength"
    >
      maxLength
    </b>
    <div
      class="soui-input soui-input-wrapper"
      data-soui-input-border="true"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          maxlength="5"
          placeholder="5"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about number 1`] = `
<div
  style="width: 300px;"
>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="digits undefined"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="digits 0"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="digits 1"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="digits 2"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="non-negative"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="integerLimit 3"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="digits 3; autoFix"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="positive;integerLimit 3"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input-wrapper-number soui-input soui-input-wrapper"
    data-soui-input-border="true"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="positive; integerLimit 3"
        type="text"
        value=""
      />
    </div>
    <div
      class="soui-input-number-step"
    >
      <span>
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
      <span>
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about number 2`] = `
<div
  class="soui-gap soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; flex-direction: column; gap: 24px;"
>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <div
      class="soui-input-group"
      data-soui-role="input-group"
      dir="ltr"
      style="width: 300px;"
    >
      <a
        class="soui-link soui-link-wrapper soui-link-secondary"
        style="cursor: pointer; padding: 0px 8px; border-radius: 4px 0 0 4px;"
      >
        <div
          style="width: 16px; height: 16px;"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.25,11 C19.8022847,11 20.25,11.4477153 20.25,12 C20.25,12.5128358 19.8639598,12.9355072 19.3666211,12.9932723 L19.25,13 L5.25,13 C4.69771525,13 4.25,12.5522847 4.25,12 C4.25,11.4871642 4.63604019,11.0644928 5.13337887,11.0067277 L5.25,11 L19.25,11 Z"
              />
            </g>
          </svg>
        </div>
      </a>
      <div
        class="soui-input soui-input-wrapper"
        data-soui-input-border="true"
      >
        <div
          class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
        >
          <input
            class="soui-input-input"
            placeholder="please enter"
            type="text"
            value=""
          />
        </div>
      </div>
      <a
        class="soui-link soui-link-wrapper soui-link-secondary"
        style="cursor: pointer; padding: 0px 8px; border-radius: 0 4px 4px 0;"
      >
        <div
          style="width: 16px; height: 16px;"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.0317 4C12.5445 4.00067 12.9667 4.38727 13.0238 4.88468L13.0303 5.00131L13.022 11H19C19.5523 11 20 11.4477 20 12C20 12.5128 19.614 12.9355 19.1166 12.9933L19 13H13.02L13.012 19.0013C13.0113 19.5536 12.563 20.0007 12.0107 20C11.4979 19.9993 11.0757 19.6127 11.0186 19.1153L11.012 18.9987L11.02 13H5C4.44772 13 4 12.5523 4 12C4 11.4872 4.38604 11.0645 4.88338 11.0067L5 11H11.022L11.0304 4.99869C11.0311 4.44641 11.4794 3.99928 12.0317 4Z"
            />
          </svg>
        </div>
      </a>
    </div>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <div
      class="soui-input-wrapper-number soui-input soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 300px;"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          placeholder="please enter"
          type="text"
          value=""
        />
      </div>
      <div
        class="soui-input-number-step"
      >
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about password 1`] = `
<form
  class="soui-form soui-form-wrapper"
>
  <div
    class="soui-input soui-input-wrapper soui-input-password"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="input password"
        type="text"
        value=""
      />
      <span
        class="soui-input-password-toggle"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20.41 11.536C19.7483 10.8368 19.0313 10.1921 18.266 9.608C16.146 7.98 13.951 7 12 7C10.049 7 7.853 7.98 5.733 9.606C4.96801 10.19 4.25136 10.8348 3.59 11.534C3.34585 11.7967 3.34584 12.2033 3.58999 12.466C4.25208 13.1649 4.96941 13.8093 5.735 14.393C7.855 16.02 10.05 17 12.003 17C13.954 17 16.149 16.02 18.269 14.395C19.0333 13.8113 19.7493 13.1668 20.41 12.468C20.4106 12.4674 20.4111 12.4668 20.4117 12.4662C20.6554 12.2037 20.6547 11.7975 20.41 11.536ZM12 5C16.416 5 22.997 10.05 23 12.001C23.003 13.953 16.42 19.001 12.003 19C7.586 19 1.003 13.953 1 12.001C0.997002 10.05 7.583 5 12 5ZM12 15.5C10.067 15.5 8.5 13.933 8.5 12C8.5 10.067 10.067 8.5 12 8.5C13.933 8.5 15.5 10.067 15.5 12C15.5 13.933 13.933 15.5 12 15.5ZM12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
          />
        </svg>
      </span>
    </div>
  </div>
</form>
`;

exports[`Input[Base] should render correctly about size 1`] = `
<div
  style="width: 100%; display: flex; align-items: center; gap: 24px; flex-wrap: wrap;"
>
  <div
    class="soui-input soui-input-wrapper soui-input-wrapper-small"
    data-soui-input-border="true"
    style="width: 240px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="small size"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="width: 240px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="default size"
        value=""
      />
    </div>
  </div>
  <div
    class="soui-input soui-input-wrapper soui-input-wrapper-large"
    data-soui-input-border="true"
    style="width: 240px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        placeholder="large size"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input[Base] should render correctly about tip 1`] = `
<div
  class="soui-input soui-input-wrapper"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="input something"
      value=""
    />
  </div>
</div>
`;

exports[`Input[Base] should render correctly about trim 1`] = `
<div
  class="soui-input soui-input-wrapper"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="input something"
      value=""
    />
  </div>
</div>
`;

exports[`Input[Base] should render correctly about underline 1`] = `
<div
  class="soui-input soui-input-wrapper soui-input-wrapper-underline"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="Underline"
      value=""
    />
  </div>
</div>
`;

exports[`Input[Base] should render correctly about validate 1`] = `
<div
  class="soui-input soui-input-wrapper"
  data-soui-input-border="true"
  style="width: 300px;"
>
  <div
    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
  >
    <input
      class="soui-input-input"
      placeholder="email"
      value=""
    />
  </div>
</div>
`;
